# TFTetrisEnv

./: .gitignore  Moves.py  Pieces.py  PlayPyGame.py  README.md  RotationSystem.py  Scorer.py  Test.py  TetrisEnv.py  b2b_demo.py  b2b_optimize.py  b2b_test.py  cmaes_optimize.py  pyproject.toml  setup.py
TFTetrisEnv/: Moves.py  PyTetrisEnv.py  RotationSystem.py  Scorer.py  TetrisEnv.py  __init__.py
TetrisEnv/: CB2BSearch.py  CHoleFinder.py  CKeySequences.py  CTetrisCore.py  KeySequences.py  KeySequencesBitboard.py  Moves.py  Pieces.py  Placements.py  Py1v1TetrisRunner.py  Py1v1TetrisRunnerFlat.py  PyTetris1v1Env.py  PyTetrisEnv.py  PyTetrisRunner.py  RotationSystem.py  Scorer.py  TetrioRandom.py  __init__.py  b2b_search.c  hole_finder.c  pathfinder.c  tet_core.h
TetrisEnvs/: __init__.py
TetrisEnvs/PyTetrisEnv/: Moves.py  Pieces.py  PyTetrisEnv.py  PyTetrisRunner.py  RotationSystem.py  Scorer.py  __init__.py  helpers.py
TetrisEnvs/TFTetrisEnv/: TFMoves.py  TFPieces.py  TFRotationSystem.py  TFScorer.py  TFTetrisEnv.py  TFTetrisRunner.py  __init__.py
