[project]
name = "TetrisEnv"
version = "0.8.0"
description = "Environment for RL with Tetris SRS+"
readme = "README.md"
requires-python = ">=3.11.11"
authors = [{ name = "Michael Sherrick", email = "michael.a.sherrick@gmail.com" }]
dependencies = [
    "numpy<2",
    "tensorflow==2.15.1",
    "tf-agents==0.19.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["TetrisEnv"]
